--- a/email-aps edicao/LinhaNotus.html
+++ b/email-aps edicao/LinhaNotus.html
@@ -111,37 +111,44 @@
                            color:#1F2937;
                            letter-spacing:0.4px;
                            text-transform:uppercase;">
-                                    <span style="color:#005A8C;"> CAMPANHA DO MÊS DE NOVEMBRO! </span>
+                                    <span style="color:#005A8C;"> TODA LINHA NOTUS EM PROMOÇÃO </span>
                                 </h1>
                             </td>
                         </tr>
+
+                        <div style="width:100%; max-width:600px; margin:0 auto; display:block;">
+                            <table role="presentation" width="100%" style="border-collapse:collapse;">
+                                <tr>
+                                    <td align="center" style="padding:16px;">
+                                        <table role="presentation"
+                                            style="margin:0 auto; border:1px solid #E5E7EB; border-radius:12px; background:#ffffff; box-shadow:0 2px 6px rgba(0,0,0,0.06);">
+                                            <tr>
+                                                <td style="padding:16px 10px 0; text-align:center;">
+                                                    <img src="https://storage.googleapis.com/abm-pecas.appspot.com/manufacturers%2F518%2F600%2Fnotus.webp"
+                                                        width="220" height="220" alt="GMV GM-9000.2 NOTUS"
+                                                        style="display:block; width:300px; height:250px; border-radius:10px; max-width:100%; object-fit:contain; margin: 0 auto;">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
 
                         <tr>
                             <td style="padding:0 20px 10px;text-align:center">
                                 <div
                                     style="display:inline-block;padding:10px 18px;border:2px solid #F94336;border-radius:30px;color:#F94336;font-weight:800;font-size:15px;text-transform:uppercase;letter-spacing:1px;">
-                                    <span> Descontos imperdíveis em toda a linha
-                                        <span style="color:#005A8C;font-weight:700;">Notus</span> — só
-                                        neste mês! </span>
+                                    <span> Descontos imperdíveis </span> <br> <br>
+                                    <span style="color:#0B996F;"> Ligue agora e confira os preços</span>
                                 </div>
                             </td>
                         </tr>
 
                         <tr>
                             <td style="text-align:center; padding: 40px 0;">
-                                <p style="
-                  font-size: 26px;
-                  font-weight: 900;
-                  color: #0f172a;
-                  text-transform: uppercase;
-                  margin: 14px 0 6px;
-                  letter-spacing: 0.8px;
-                  line-height: 1.3;
-                  padding: 0;
-                  font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-                ">
-                                    DESCONTOS EM TODA Linha Notus:<br>
-                                </p>
                                 <p style="
                   font-size: 18px; /* Tamanho da fonte menor para o subtítulo */
                   font-weight: 800;
@@ -150,11 +157,10 @@
                   padding: 0;
                   font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
                 ">
-                                    Sua linha conta com radiadores de água, radiadores de óleo, radiadores de ar
-                                    (intercoolers), defletores, eletroventiladores, evaporadores, radiadores de
-                                    aquecimento e GMVs.
+                                    Radiadores de Água, Radiadores de Óleo,
+                                    Intercoolers, Defletores, Eletroventiladores, Evaporadores, Radiadores de
+                                    Aquecimento e GMVs
                                 </p>
-
                                 <div style="
                   width: 80px;
                   height: 3px;
@@ -409,15 +415,6 @@
                         </tr>
 
 
-
-
-
-
-
-
-
-
-
                         <!-- ====== catalogo ====== -->
 
                         <tr>
@@ -613,25 +610,32 @@
 
                         <!-- CENTROS DE DISTRIBUIÇÃO -->
                         <tr>
-                            <td style="background:#2E2E2E;color:#ffffff;padding:15px">
+                            <td style="background:#2E2E2E; color:#ffffff; padding: 15px;">
+
                                 <p
-                                    style="text-align:center;font-size:13px;text-transform:uppercase;letter-spacing:1px;margin:0 0 15px;color:#F94336;font-weight:600">
+                                    style="text-align:center; font-size:13px; text-transform:uppercase; letter-spacing:1px; margin:0 0 15px; color:#F94336; font-weight:600;">
                                     Centros de Distribuição
                                 </p>
+
                                 <table role="presentation" width="100%">
                                     <tr>
                                         <td width="50%"
-                                            style="font-size:14px;color:#cccccc;line-height:1.8;text-align:center">
-                                            <strong>SP:</strong> São Paulo, Campinas, São João da Boa Vista e Bauru<br>
-                                            <strong>ES:</strong> Cariacica | <strong>MG:</strong> Contagem
+                                            style="font-size:14px; color:#cccccc; line-height:1.8; text-align:center; vertical-align: top; padding: 0 5px;">
+                                            <strong>SP:</strong> São Paulo, Campinas, S.J.B. Vista e Bauru<br>
+                                            <strong>ES:</strong> Cariacica<br>
+                                            <strong>MG:</strong> Contagem<br>
                                         </td>
+                                        
                                         <td width="50%"
-                                            style="font-size:14px;color:#cccccc;line-height:1.8;text-align:center">
-                                            <strong>GO:</strong> Goiânia | <strong>PR:</strong> Curitiba e Londrina<br>
-                                            <strong>SC:</strong> São José | <strong>RS:</strong> Porto Alegre
+                                        style="font-size:14px; color:#cccccc; line-height:1.8; text-align:center; vertical-align: top; padding: 0 5px;">
+                                            <strong>GO:</strong> Goiânia <br>
+                                            <strong>PR:</strong> Curitiba e Londrina<br>
+                                            <strong>SC:</strong> São José<br>
+                                            <strong>RS:</strong> Porto Alegre
                                         </td>
                                     </tr>
                                 </table>
+
                             </td>
                         </tr>
 
