--- a/email-aps edicao/RadiadoredeÁgua.html
+++ b/email-aps edicao/RadiadoredeÁgua.html
@@ -151,8 +151,11 @@
                         font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
                         text-transform: uppercase;
                     ">
-                                                Toda linha de<br>Radiadores de Água
+                                                Toda linha de<br>Radiadores de Água <br>
+                                                <span style="color: #A0C417;">VALEO</span> e
+                                                <span style="color: #FF0000;">MAHLE</span><br>
                                             </p>
+
                                             <div style="
                         width: 80px;
                         height: 3px;
@@ -160,11 +163,13 @@
                         margin: 10px auto 0;
                         border-radius: 4px;
                     "></div>
+
                                         </td>
                                     </tr>
                                 </table>
                             </td>
                         </tr>
+
 
                         <tr>
                             <td style="padding:12px 14px 8px;">
@@ -186,27 +191,23 @@
                                                                 style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06); margin:0 auto;">
                                                                 <tr>
                                                                     <td style="padding:10px 10px 0;text-align:center;">
-                                                                        <img src="Imagens/radiador1.jpeg" width="180"
-                                                                            height="180" alt=""
+                                                                        <img src="https://toppng.com/uploads/preview/valeo-vector-logo-free-11574203817uyzfid2jfh.png"
+                                                                            width="180" height="180" alt=""
                                                                             style="display:block;width:180px;height:180px;border-radius:10px;max-width:100%;margin:0 auto;">
                                                                     </td>
                                                                 </tr>
                                                             </table>
                                                         </td>
-
-                                                        <!-- Produto 2 -->
                                                         <td width="50%" align="center" valign="top"
                                                             style="padding:8px;">
                                                             <table role="presentation" width="100%"
                                                                 style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06); margin:0 auto;">
                                                                 <tr>
                                                                     <td style="padding:10px 10px 0;text-align:center;">
-                                                                        <img src="Imagens/radiador2.jpeg" width="180"
-                                                                            height="180" alt=""
+                                                                        <img src="https://yt3.googleusercontent.com/_RMR12W8pwYKQy_If4hwmJZZXLXBo0mykduvHh4U7okuEUFt-QhMSRS66htZ5XzFxcX-tZP0Lg=s900-c-k-c0x00ffffff-no-rj"
+                                                                            width="180" height="180" alt=""
                                                                             style="display:block;width:180px;height:180px;border-radius:10px;max-width:100%;margin:0 auto;">
                                                                     </td>
-                                                                </tr>
-                                                                <tr>
                                                                 </tr>
                                                             </table>
                                                         </td>
@@ -232,33 +233,16 @@
                                                     style="border-collapse:collapse; margin:0 auto;">
                                                     <tr>
                                                         <!-- Produto 1 -->
-                                                        <td width="50%" align="center" valign="top"
+                                                        <td width="100%" align="center" valign="top"
                                                             style="padding:8px;">
                                                             <table role="presentation" width="100%"
                                                                 style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06); margin:0 auto;">
                                                                 <tr>
                                                                     <td style="padding:10px 10px 0;text-align:center;">
-                                                                        <img src="Imagens/radiador3.jpeg" width="180"
-                                                                            height="180" alt=""
-                                                                            style="display:block;width:180px;height:180px;border-radius:10px;max-width:100%;margin:0 auto;">
+                                                                        <img src="https://w7startup.com.br/ImagensAPS/radiadoresjuntos.png"
+                                                                             alt=""
+                                                                            style="display:block; width:250px; height:250px; border-radius:10px; max-width:100%; margin:0 auto;">
                                                                     </td>
-                                                                </tr>
-                                                            </table>
-                                                        </td>
-
-                                                        <!-- Produto 2 -->
-                                                        <td width="50%" align="center" valign="top"
-                                                            style="padding:8px;">
-                                                            <table role="presentation" width="100%"
-                                                                style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06); margin:0 auto;">
-                                                                <tr>
-                                                                    <td style="padding:10px 10px 0;text-align:center;">
-                                                                        <img src="Imagens/radiador4.jpeg" width="180"
-                                                                            height="180" alt=""
-                                                                            style="display:block;width:180px;height:180px;border-radius:10px;max-width:100%;margin:0 auto;">
-                                                                    </td>
-                                                                </tr>
-                                                                <tr>
                                                                 </tr>
                                                             </table>
                                                         </td>
@@ -516,7 +500,7 @@
                         </tr>
 
 
-                        
+
                         <tr>
                             <td style="text-align:center;padding:22px 20px 26px;">
                                 <a href="https://wa.me/551936344855" target="_blank" class="cta-button" style="display:inline-block;
