--- a/email-aps edicao/RadiadoredeÁgua.html
+++ b/email-aps edicao/RadiadoredeÁgua.html
@@ -328,7 +328,7 @@
                                                                 style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06); margin:0 auto;">
                                                                 <tr>
                                                                     <td style="padding:10px 10px 0;text-align:center;">
-                                                                        <img src="Imagens/Valeo.jpeg" width="180"
+                                                                        <img src="https://w7startup.com.br/ImagensAPS/radiadoresEmail/Valeo.jpeg" width="180"
                                                                             height="180" alt=""
                                                                             style="display:block;width:180px;height:180px;border-radius:10px;max-width:100%;margin:0 auto;">
                                                                     </td>
@@ -351,7 +351,7 @@
                                                                 style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06); margin:0 auto;">
                                                                 <tr>
                                                                     <td style="padding:10px 10px 0;text-align:center;">
-                                                                        <img src="Imagens/mahle.jpeg" width="180"
+                                                                        <img src="https://w7startup.com.br/ImagensAPS/radiadoresEmail/mahle.jpeg" width="180"
                                                                             height="180" alt=""
                                                                             style="display:block;width:180px;height:180px;border-radius:10px;max-width:100%;margin:0 auto;">
                                                                     </td>
