--- a/email-aps edicao/UltimaSemanaBlack.html
+++ b/email-aps edicao/UltimaSemanaBlack.html
@@ -184,7 +184,7 @@
                         font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
                         text-transform: uppercase;
                     ">
-                                                Garanta seus produtos com procedência e pronta entrega.
+                                                APROVEITE OS SUPER DESCONTOS DESTE MÊS
                                                 <br>
 
                                             </p>
@@ -221,7 +221,7 @@
                         font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
                         text-transform: uppercase;
                     ">
-                                                Linha completa Notus com preços especiais
+                                                LINHA COMPLETA DE NOTUS, VISCONDE E MAHLE COM PREÇOS ESPECIAIS.
                                                 <br>
 
                                             </p>
@@ -359,14 +359,14 @@
 
                         <tr>
                             <td style="padding:12px 14px 8px;">
-
-                                <!-- PRIMEIRA LINHA -->
                                 <div
                                     style="width:100%; max-width:600px; margin:0 auto; display:block; text-align:center;">
                                     <table role="presentation" width="100%" align="center"
                                         style="border-collapse:collapse; margin:0 auto;">
                                         <tr>
                                             <td align="center" style="text-align:center;">
+
+                                                <!-- LINHA 1 – Valeo e Mahle -->
                                                 <table role="presentation" align="center"
                                                     style="border-collapse:collapse; margin:0 auto;">
                                                     <tr>
@@ -387,7 +387,7 @@
                                                                         style="padding:10px 12px 12px;text-align:center;">
                                                                         <p
                                                                             style="margin:0;font-size:13px;color:#1F2937;font-weight:700;">
-                                                                            Valeo </p>
+                                                                            Valeo</p>
                                                                     </td>
                                                                 </tr>
                                                             </table>
@@ -417,12 +417,42 @@
                                                         </td>
                                                     </tr>
                                                 </table>
+
+                                                <!-- LINHA 2 – Visconde centralizado -->
+                                                <table role="presentation" align="center"
+                                                    style="border-collapse:collapse; margin:0 auto; margin-top:8px;">
+                                                    <tr>
+                                                        <td width="100%" align="center" valign="top"
+                                                            style="padding:8px;">
+                                                            <table role="presentation" width="100%"
+                                                                style="border:1px solid #E5E7EB;border-radius:12px;background:#ffffff;box-shadow:0 2px 6px rgba(0,0,0,0.06); margin:0 auto; max-width:260px;">
+                                                                <tr>
+                                                                    <td style="padding:10px 10px 0;text-align:center;">
+                                                                        <img src="https://www.apsdistribuidora.com.br/imagens/produto/0000000059719_img.jpg"
+                                                                            width="180" height="180" alt=""
+                                                                            style="display:block;width:180px;height:180px;border-radius:10px;max-width:100%;margin:0 auto;">
+                                                                    </td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td
+                                                                        style="padding:10px 12px 12px;text-align:center;">
+                                                                        <p
+                                                                            style="margin:0;font-size:13px;color:#1F2937;font-weight:700;">
+                                                                            Visconde</p>
+                                                                    </td>
+                                                                </tr>
+                                                            </table>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+
                                             </td>
                                         </tr>
                                     </table>
                                 </div>
                             </td>
                         </tr>
+
 
                         <!-- ====== catalogo ====== -->
 
