--- a/email-aps edicao/Radiadores_Visconde_Valeo.html
+++ b/email-aps edicao/Radiadores_Visconde_Valeo.html
@@ -114,7 +114,7 @@
                 ">
                                             <h1 style="
                         margin:0;
-                        font-size:30px;
+                        font-size:27px;
                         line-height:38px;
                         font-weight:900;
                         color:#005A8C;
@@ -122,7 +122,7 @@
                         text-transform:uppercase;
                         font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
                     ">
-                                                SUPER DESCONTO HOJE!
+                                            AINDA DÁ TEMPO DE APROVEITAR O SUPER DESCONTO!
                                             </h1>
                                         </td>
                                     </tr>
