--- a/email-aps edicao/ÚltimaSemanaNatal.html
+++ b/email-aps edicao/ÚltimaSemanaNatal.html
@@ -142,12 +142,12 @@
                                                 color: #FFF;
                                                 text-shadow: 0 2px 4px rgba(0,0,0,0.2);
                                             ">
-                                                Ainda dá tempo de garantir as peças<br> <span style="color:#FFD700;">para as
-                                                    revisões do feriadão de fim de ano!</span>
+                                                Prepare seu estoque para as<br> <span style="color:#FFD700;">Revisões de
+                                                    Fim de Ano!</span>
                                             </h1>
 
                                             <p style="margin: 10px 0 0; font-size: 16px; opacity: 0.9;">
-                                                Garanta agora o estoque que sua oficina precisa para não perder nenhuma venda.
+                                                Não perca vendas neste feriadão.
                                             </p>
                                         </td>
                                     </tr>
