--- a/email-aps edicao/FinaldeAno.html
+++ b/email-aps edicao/FinaldeAno.html
@@ -160,8 +160,8 @@
                                             ">
                                                 Nós só não estaremos funcionando nos dias:
                                             </p>
-                            </td>
-                        </tr>
+                                        </td>
+                                    </tr>
 
                                     <!-- CARDS COM DATAS - DESIGN MODERNO -->
                                     <tr>
@@ -170,10 +170,12 @@
                                                 <tr>
                                                     <!-- GRUPO 1: 24/12 e 25/12 -->
                                                     <td width="50%" align="center" valign="top" style="padding:12px;">
-                                                        <table role="presentation" align="center" style="border-spacing:0;">
+                                                        <table role="presentation" align="center"
+                                                            style="border-spacing:0;">
                                                             <tr>
                                                                 <td style="padding:10px;text-align:center;">
-                                                                    <table role="presentation" align="center" style="margin:0 auto;">
+                                                                    <table role="presentation" align="center"
+                                                                        style="margin:0 auto;">
                                                                         <tr>
                                                                             <td style="
                                                                                 width: 90px;
@@ -199,7 +201,8 @@
                                                             </tr>
                                                             <tr>
                                                                 <td style="padding:10px;text-align:center;">
-                                                                    <table role="presentation" align="center" style="margin:0 auto;">
+                                                                    <table role="presentation" align="center"
+                                                                        style="margin:0 auto;">
                                                                         <tr>
                                                                             <td style="
                                                                                 width: 90px;
@@ -228,10 +231,12 @@
 
                                                     <!-- GRUPO 2: 31/12 e 01/01 -->
                                                     <td width="50%" align="center" valign="top" style="padding:12px;">
-                                                        <table role="presentation" align="center" style="border-spacing:0;">
+                                                        <table role="presentation" align="center"
+                                                            style="border-spacing:0;">
                                                             <tr>
                                                                 <td style="padding:10px;text-align:center;">
-                                                                    <table role="presentation" align="center" style="margin:0 auto;">
+                                                                    <table role="presentation" align="center"
+                                                                        style="margin:0 auto;">
                                                                         <tr>
                                                                             <td style="
                                                                                 width: 90px;
@@ -257,7 +262,8 @@
                                                             </tr>
                                                             <tr>
                                                                 <td style="padding:10px;text-align:center;">
-                                                                    <table role="presentation" align="center" style="margin:0 auto;">
+                                                                    <table role="presentation" align="center"
+                                                                        style="margin:0 auto;">
                                                                         <tr>
                                                                             <td style="
                                                                                 width: 90px;
@@ -287,7 +293,7 @@
                                             </table>
                                         </td>
                                     </tr>
-                                    </table>
+                                </table>
                             </td>
                         </tr>
 
