--- a/email-aps edicao/Arrefecimento.html
+++ b/email-aps edicao/Arrefecimento.html
@@ -103,7 +103,7 @@
                             <td style="padding: 40px 20px 10px;text-align:center">
                                 <p
                                     style="margin:0;font-size:14px;color:#F94336;font-weight:bold;text-transform:uppercase;letter-spacing:1px;">
-                                    Chegou a Temporada
+                                    CHEGOU A ALTA TEMPORADA
                                 </p>
                                 <h1 style="margin:10px 0 0;
                            font-size:32px;
@@ -112,8 +112,8 @@
                            color:#1F2937;
                            text-transform:uppercase;
                            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-                                    <span style="color:#005A8C;">ARREFECIMENTO</span><br>
-                                    PRONTO PARA O VERÃO
+                                    <span style="color:#005A8C;">CLIMATIZAÇÃO</span><br>
+                                    PRONTA PARA O VERÃO
                                 </h1>
                             </td>
                         </tr>
@@ -139,7 +139,7 @@
                                         <td class="stack" width="50%" style="padding:10px;text-align:center;">
                                             <div style="border:1px solid #E2E8F0;border-radius:12px;padding:15px;">
                                                 <h3 style="color:#005A8C;font-size:16px;margin:0 0 10px;">
-                                                    Eletroventiladores</h3>
+                                                    Confira nossa grande variedade de produtos!</h3>
                                                 <img src="https://w7startup.com.br/ImagensAPS/img%202.png"
                                                     alt="Ventiladores"
                                                     style="display:block; width:75%; height:auto; border-radius:8px; margin: 0 auto;">
@@ -167,9 +167,7 @@
                                         <td style="text-align:center;padding-bottom:30px;">
                                             <h2
                                                 style="font-size: 22px;font-weight: 800;color: #343947;margin: 0;font-family: 'Segoe UI', sans-serif;">
-                                                PARCERIA QUE <span
-                                                    style="color:#F94336;border-bottom:3px solid #F94336;">NÃO
-                                                    ESQUENTA</span> A CABEÇA
+                                                PARCERIA ESPECIALIZADA PARA TE APOIAR
                                             </h2>
                                         </td>
                                     </tr>
@@ -241,11 +239,11 @@
                                                     <td style="padding:25px 20px;text-align:center;">
                                                         <p
                                                             style="margin:0 0 8px;font-size:16px;font-weight:bold;color:#F94336;">
-                                                            Compra Segura
+                                                            Vendedores Especialistas
                                                         </p>
                                                         <p
                                                             style="margin:0;font-size:13px;color:#64748B;line-height:1.4;">
-                                                            Transparência total e dados 100% protegidos.
+                                                            Apoio para a venda certa dos produtos que precisa.
                                                         </p>
                                                     </td>
                                                 </tr>
