--- a/email-aps edicao/Aditivo.html
+++ b/email-aps edicao/Aditivo.html
@@ -288,14 +288,14 @@
                         <tr>
                           <td height="80" style="height:80px;text-align:center;padding-top:12px;">
                             <p style="margin:8px 0 0;font-size:15px;font-weight:700;color:#1F2937;">
-                              Suporte Especializado
+                              Vendedores Especialistas
                             </p>
                           </td>
                         </tr>
                         <tr>
                           <td
                             style="padding:6px 12px 14px;text-align:center;font-size:13px;line-height:18px;color:#4B5563;">
-                            Equipe técnica pronta para atender você com rapidez.
+                            Equipe comercial com conhecimento técnico pra lhe ajudar.
                           </td>
                         </tr>
                       </table>
